<resources>
    <string name="app_name">Skynet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username"> Username </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_the_follwoing_information">Please enter the following information</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="goal">Goal:</string>
    <string name="please_enter_your_height_here">Please enter your height here</string>
    <string name="please_enter_your_weight_here">Please enter your Weight here</string>
    <string name="please_enter_your_age_here">Please enter your Age here</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="time_to_achieve_goal">Time to achieve Goal:</string>
    <string name="sessions_in_a_week">Sessions in a Week:</string>
    <string name="user_requirements">User Requirements</string>
    <string name="fitness_test">Fitness Test</string>
    <string name="here_are_the_recommended_workouts">Here are the recommended Workouts</string>
    <string name="session_workout">Session Workout</string>
    <string name="start" />
    <string name="explore" />
    <string name="cancel" />
    <string name="invalid_data_value">---</string>
    <string name="distance_format_miles">%s mi.</string>
    <string name="distance_format_km">%s km</string>
    <string name="distance_format_ft">%s ft</string>
    <string name="distance_format_meters">%s m</string>
    <string name="speed_format_mph">%s mph</string>
    <string name="speed_format_kph">%s kph</string>
    <string name="otf_service_status_connected">Connected</string>
    <string name="otf_service_status_connecting">Connecting</string>
    <string name="otf_service_status_disconnected">Not Connected</string>
    <string name="otf_service_status_error">Error %s</string>
    <string name="dummy_otf_state">dummy otf state</string>
    <string name="start_fitness_test">Start Fitness Test</string>
    <string name="developer_s_magic_button">Developer\'s Magic Button!</string>
</resources>
