<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".UserInfoActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/please_enter_the_follwoing_information"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@id/textView1"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-74sp"
        android:text="@string/height"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@id/textView1"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-74sp"
        android:text="@string/weight"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="-44sp"
        android:text="@string/age"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_age"
        android:layout_alignLeft="@id/textView1"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-74sp"
        android:text="@string/gender"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_gender"
        android:layout_alignLeft="@id/textView1"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-74sp"
        android:text="I exercise                days per week"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview3"
        android:layout_alignStart="@+id/textview3"
        android:layout_alignLeft="@id/textView1"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-74sp"
        android:text="I want to exercise               days per week"
        android:textColor="#a9cbd1"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/user_desire"
        android:layout_width="61dp"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textview27"
        android:layout_alignBottom="@+id/textview27"
        android:layout_marginStart="164dp"
        android:layout_marginTop="242dp"
        android:layout_marginBottom="1dp"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/user_current"
        android:layout_width="61dp"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textview3"
        android:layout_alignBottom="@+id/textview3"
        android:layout_marginStart="100dp"
        android:layout_marginTop="242dp"
        android:layout_marginBottom="2dp"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/user_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignLeft="@id/editText_age"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="1dp"
        android:spinnerMode="dropdown"
        android:textColor="#fff"
        android:visibility="visible" />


    <EditText
        android:id="@+id/editText_height"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="99dp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="26dp"
        android:hint="Please enter your height in cm"
        android:inputType="number"
        android:textColorHint="#e2725b" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="99dp"
        android:layout_marginTop="70sp"
        android:layout_marginRight="31dp"
        android:hint="Please enter your weight in kg"
        android:inputType="number"
        android:textColorHint="#e2725b" />

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginStart="99dp"
        android:layout_marginTop="110sp"
        android:layout_marginRight="59dp"
        android:hint="@string/please_enter_your_age_here"
        android:inputType="number"
        android:textColorHint="#e2725b" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview27"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="199dp"
        android:backgroundTint="#13EE1B"
        android:backgroundTintMode="src_in"
        android:text="@string/confirm"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/userinfo_cancel"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview27"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="271dp"
        android:backgroundTint="#FF1100"
        android:backgroundTintMode="src_in"
        android:text="cancel"
        android:textColor="#FFFFFF" />

</RelativeLayout>